--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -14,6 +14,13 @@ a:hover{
     color: #0c4128;
 }
 
+.fechado {
+    color: #d90000;
+}
+
+.aberto{
+    color: #28cb7e;
+}
 .flex{
     display: flex;
 }
